# Comprehensive-Design

./: README.md
DM8168/: README.md
DM8168/src/: audioConfig.h  audioWav.c  audioWav.h
DM8168/src/ALSA/: Makefile  README.md  audioCapture.c  audioCapture.h  audioConfig.h  audioPipeline.h  audioPlayback.c  audioPlayback.h  deploy.sh  mainTest.c
DM8168/src/ex04/: README.md  makefile  products.mak  run.sh
DM8168/src/ex04/dsp/: AudioAlgo.c  AudioAlgo.h  Server.c  dsp_algorithm.c  dsp_algorithm.h  makefile
DM8168/src/ex04/host/: makefile
DM8168/src/ex04/host/app/: appIntegration.h  appMenu.c  appMenu.h  main.c  makefile  run.sh
DM8168/src/ex04/host/audio/: README.md  audioCapture.c  audioCapture.h  audioConfig.c  audioConfig.h  audioPipeline.h  audioPlayback.c  audioPlayback.h  audioWav.c  audioWav.h
DM8168/src/ex04/host/syslink/: README.md  syslinkDsp.c  syslinkDsp.h
DM8168/src/ex04/shared/: AppCommon.h  config.bld
DM8168/src/ex04/tests/audio/: Makefile  mainTest.c
MSP430/assets/templates/MyComTool/: frmcomtool.cpp  head.h
MSP430/assets/templates/comtool-vers1/: CMakeLists.txt  head.h
MSP430/assets/templates/comtool-vers1/api/: appconfig.h
MSP430/assets/templates/comtool-vers1/form/: frmcomtool.cpp
MSP430/assets/templates/comtool-vers2/: CMakeLists.txt  databuffer.cpp  filebuffer.cpp  filebuffer.h  filepainter.cpp  filereader.h  global.h  logger.cpp  logger.h
MSP430/assets/templates/comtool-vers2/form/: frmcomtool.ui
MSP430/src/firmware/: adc.c  uart.c
MSP430/src/software/comtool/: CMakeLists.txt  logger.h  main.cpp
MSP430/src/software/comtool/api/: appconfig.cpp  appconfig.h
MSP430/src/software/comtool/component/: clickablebutton.cpp  clickablebutton.h
MSP430/src/software/comtool/core/: databuffer.h  datamanager.cpp  datamanager.h
MSP430/src/software/comtool/entity/: ansframe.h  databothframe.h
MSP430/src/software/comtool/form/: frmcomtool.ui
MSP430/src/software/comtool/lib/qcustomplot/: qcustomplot.cpp  qcustomplot.h
MSP430/src/software/comtool/storage/: csvreader.h  csvwriter.cpp  filemanager.cpp  filemanager.h  istorage.h
MSP430/src/software/comtool/transport/: filetransport.cpp  filetransport.h  itransport.h  serialtransport.cpp  serialtransport.h
MSP430/src/software/comtool/util/: framedispatcher.h  framefactory.cpp  frameparser.cpp  frameparser.h
MSP430/src/software/comtool/view/: datavisualizer.h
MyComTool/: MyComTool.pro  frmcomtool.h
assets/templates/MyComTool/: frmcomtool.ui  main.cpp
assets/templates/comtool/: main.cpp  readme.md
assets/templates/comtool-vers1/: main.cpp
assets/templates/comtool-vers1/form/: frmcomtool.h
assets/templates/comtool-vers2/: databuffer.h  filewriter.cpp  filewriter.h  serialpainter.cpp
assets/templates/comtool/form/: frmcomtool.ui
src/software/SIMULATION_SERIAL_PORT_TEST/java/: WalkTest.java
src/software/comtool/: CMakeLists.txt  filepainter.h  filereader.cpp  logger.cpp  main.cpp  serialpainter.h  serialworker.cpp  serialworker.h
src/software/comtool/api/: appconfig.cpp  appconfig.h  appdata.h
src/software/comtool/core/: commander.cpp  commander.h  databuffer.cpp  datamanager.cpp  datamanager.h
src/software/comtool/entity/: baseframe.h  datatempframe.h  datavoltageframe.h  errortype.h  frametype.h
src/software/comtool/form/: frmcomtool.cpp  frmcomtool.h  frmcomtool.ui
src/software/comtool/qrc/: main.qrc
src/software/comtool/storage/: csvreader.cpp  csvwriter.h
src/software/comtool/transport/: serialtransport.cpp  serialtransport.h
src/software/comtool/util/: framedispatcher.cpp  framefactory.cpp  framefactory.h  frameparser.cpp
src/software/comtool/view/: chartconfig.h  datavisualizer.cpp  datavisualizer.h
tests/SIMULATION_SERIAL_PORT_TEST/java/: MixedRandomWalk.java  README.md  pom.xml
tests/SIMULATION_SERIAL_PORT_TEST/java/walk/: MixedRandomWalk.java  OriginalWalk.java
